Brushing up the design

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -15,12 +15,16 @@ ul {
     list-style:                     none;
 }
 
-
 /* Global styles */
 body {
     font:                           100% sans-serif;                                                    /* ~16px; */
     line-height:                    1.5;
     -webkit-text-size-adjust:       none;
+    background: url(../gfx/bg.png) repeat-x 0 0,url(../gfx/bg-sand.png) repeat 0 0,#f5f1e8;
+}
+
+h1, h2 {
+    font-family:                    'Asap', sans-serif;
 }
 
 a {
@@ -55,216 +59,48 @@ td ul {
     margin-left:                    4px;
 }
 
-.front .title {
-    font-family:                    'Asap', sans-serif;
-    text-align:                     right;
-    color:                          rgb(0,0,0);
-}
-.front h1.title{
-    font-size:                      2.3em;
-}
-.front h2.title{
-    font-size:                      1.525em;
-}
-
-
-.front {
-    background-repeat:              no-repeat;
-    background-position:            top center;
-    background-color:               rgb(0,0,0);
-    color:                          rgb(255,255,255);
-}
-
-.front .logo {
-    position:                       absolute;
-    top:                            10px;
-    left:                           30%;
-    width:                          40%;
-    height:                         120px;
-    background-image:               url("../gfx/wr_logo.svg");
-    background-repeat:              no-repeat;
-    background-position:            top center;
-    z-index:                        1000;
-}
-
-.front .menu {
-    position:                       absolute;
-    top:                            0;
-    height:                         80px;
-    width:                          100%;
-    font-family:                    'Asap', sans-serif;
-}
-
-
-.front .menu a {
-    background:                     rgba(255, 255, 255, 0.4);
-    color:                          rgb(255,255,255);
-    margin-top:                     45px;
-    padding-top:                    6px;
-    padding-bottom:                 6px;
-    padding-left:                   12px;
-    padding-right:                  12px;
-    text-decoration:                none;
-    display:                        table-cell;
-    border-radius:                  4px;
-}
-
-.front .menu .left {
-    position:                       absolute;
-    top:                            0;
-    left:                           0;
-    width:                          30%;
-    height:                         80px;
-}
-.front .menu .left a {
-    float:                          right;
-    margin-left:                    4px;
-}
-
-.front .menu .right {
-    position:                       absolute;
-    top:                            0;
-    right:                          0;
-    width:                          30%;
-    height:                         80px;
-}
-
-.front .menu .right a {
-    float:                          left;
-    margin-right:                   4px;
-}
-
-.front .main {
-    position:                       absolute;
-    top:                            80px;
-    bottom:                         200px;
-    display:                        block;
-    width:                          100%;
-}
-
-.front .foot {
-    position:                       absolute;
-    bottom:                         0;
-    height:                         200px;
-    width:                          100%;
-    background:                     rgba(255,255,255,0.8);
-}
-
-.front .foot section {
-    width:                          75%;
-    height:                         200px;
-    float:                          left;
-}
-
-.front .foot aside {
-    width:                          25%;
-    padding:                        20px;
-    height:                         200px;
-    float:                          right;
-    min-width:                      220px;
-}
-
-.front .foot aside div {
-    height:                         160px;
-    padding-left:                   20px;
-    overflow:                       hidden;
-    border-left:                    1px solid rgb(140,140,140);
-}
-
-
-.front .speaker {
-    position:                       absolute;
-    display:                        block;
-    border:                         6px solid rgb(178,128,89);
-    border-radius:                  90px;
-    background-color:                     rgb(255,255,255);
-    background-repeat:              no-repeat;
-    background-position:            top center;
-    height:                         180px;
-    width:                          180px;
-}
-
-.garann     { background-image:               url("../gfx/speaker_garann.jpg") }
-.robert     { background-image:               url("../gfx/speaker_robert.jpg") }
-.david      { background-image:               url("../gfx/speaker_robert.jpg") }
-.magnars    { background-image:               url("../gfx/speaker_robert.jpg") }
-
-.front .garann {
-    top:                            20%;
-    left:                           20%;
-}
-
-.front .robert {
-    top:                            30%;
-    left:                           40%;
-}
-
-.front .david {
-    top:                            70%;
-    left:                           60%;
-}
-
-.front .magnars {
-    top:                            10%;
-    left:                           80%;
-}
-
-.speakers {
-    width:                          100%;
-}
-
-.speaker .img {
-    height:                 180px;
-    width:                  180px;
-}
-.speakers .header {
-    font-size:              .813em;
-    font-weight:            300;
-    line-height:            20px;
-    padding:                0;
-    margin:                 8px 10px 4px 8px;
-}
-.speakers .subheader {
-    font-size:              .75em;
-    font-weight:            300;
-    line-height:            15px;
-    padding:                0;
-    margin:                 0 10px 3px 8px;
-}
-.speakers .info {
-    width:                  523px;
-    padding:                18px 18px 0 18px;
-}
-
-.speakers .info p {
-    font-size:              .875em;
-    font-weight:            300;
-    line-height:            26px;
-    margin-bottom:          18px;
-}
 
 
 
 
-.page {
-    background-image:               url("../gfx/bg.jpg");
-    background-color:               rgb(255,255,255);
-    color:                          rgb(0,0,0);
-}
-
-.page .logo,
-.page .menu,
-.page .wrap,
-.page .foot {
+.logo,
+.menu,
+.wrap,
+.foot .footContainer {
     overflow:                       hidden;
     width:                          720px;
     margin-left:                    auto;
     margin-right:                   auto;
     padding:                        20px;
-    background-color:               rgb(255,255,255);
+    background-color:               rgba(255,255,255,0.3);
 }
 
-.page .logo a {
+.foot {
+    overflow:                       hidden;
+    background-color:               rgb(208,204,194);
+    background-image:               url(../gfx/bg.jpg);
+    height:                         150px;
+}
+.foot .footContainer {
+    height:                         150px;
+}
+.foot section {
+    float:                          left;
+    width:                          75%;
+}
+.foot aside {
+    float:                          right;
+    width:                          25%;
+    border-left:                    1px solid rgb(140, 140, 140);
+}
+.foot a,
+.foot a:visited {
+    float:                          right;
+    text-decoration:                none;
+    color:                          rgb(140, 140, 140);
+}
+
+.logo a {
     display:                        block;
     height:                         120px;
     background-image:               url("../gfx/wr_logo.svg");
@@ -272,12 +108,12 @@ td ul {
     background-position:            top center;
 }
 
-.page .menu {
+.menu {
     padding-top:                    0;
     padding-bottom:                 0;
 }
 
-.page .menu a {
+.menu a {
     padding-top:                    8px;
     padding-bottom:                 8px;
     padding-right:                  5px;
@@ -286,31 +122,19 @@ td ul {
     color:                          rgb(0,0,0);
 }
 
-.page .menu .left a{
+.menu .left a{
     float:                          right;
 }
-.page .menu .right a{
+.menu .right a{
     float:                          left;
 }
 
-.page .menu div {
+.menu div {
     border-top:                     4px solid rgb(35,75,81);
     border-bottom:                  4px solid rgb(35,75,81);
     float:                          left;
     width:                          50%;
 
-}
-
-.page .foot a {
-    float:                          right;
-    text-decoration:                none;
-    color:                          rgb(0,0,0);
-    margin-right:                   8px;
-}
-
-.page h1,
-.page h2 {
-    font-family:                    'Asap', sans-serif;
 }
 
 .page p,
@@ -340,6 +164,7 @@ td ul {
     display:                        block;
     border:                         2px solid rgb(35,75,81);
     padding:                        4px;
+    background-color:               rgb(255,255,255);
 }
 
 .map {
