--- a/views/frontpage.ejs
+++ b/views/frontpage.ejs
@@ -4,10 +4,10 @@
     <meta charset="utf-8">
     <meta name="viewport" id="viewport" content="width=device-width,minimum-scale=1.0,maximum-scale=1.0,initial-scale=1.0">
     <link href='http://fonts.googleapis.com/css?family=Asap' rel='stylesheet' type='text/css'>
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="/css/front.css">
     <title><%=pageTitle%></title>
 </head>
-<body id="body" class="front">
+<body id="body">
     <div class="logo"></div>
 
     <menu class="menu">
@@ -22,15 +22,6 @@
             <a href="/about/">About</a>
         </div>
     </menu>
-
-
-    <main class="main">
-        <a href="/speaker/#garann" class="speaker garann"></a>
-        <a href="/speaker/#robert" class="speaker robert"></a>
-        <a href="/speaker/#robert" class="speaker david"></a>
-        <a href="/speaker/#robert" class="speaker magnars"></a>
-    </main>
-    <script src="/js/script.js"></script>
 
     <footer class="foot">
         <aside>
