--- a/views/frontpage.ejs
+++ b/views/frontpage.ejs
@@ -1,39 +1,120 @@
-<!doctype html>
-<html>
-<head>
-    <meta charset="utf-8">
-    <meta name="viewport" id="viewport" content="width=device-width,minimum-scale=1.0,maximum-scale=1.0,initial-scale=1.0">
-    <link href='http://fonts.googleapis.com/css?family=Asap' rel='stylesheet' type='text/css'>
-    <link rel="stylesheet" href="/css/front.css">
-    <title><%=pageTitle%></title>
-</head>
-<body id="body">
-    <div class="logo"></div>
+<% include snips/head.ejs %>
+    <section class="wrap">
 
-    <menu class="menu">
-        <div class="left">
-            <a href="/location/">Location</a>
-            <a href="/tickets/">Tickets</a>
-            <a href="/speakers/">Speakers</a>
-        </div>
-        <div class="right">
-            <a href="/schedule/">Schedule</a>
-            <a href="/sponsors/">Sponsors</a>
-            <a href="/about/">About</a>
-        </div>
-    </menu>
+      <article class="slot row_a">
+        <a href="/speakers/#bodil">
+          <div class="img jan"></div>
+          <h2>Bodil Stokke</h2>
+        </a>
+      </article>
 
-    <footer class="foot">
-        <aside>
-            <div>
-                <h1 class="title">23-24th May</h1>
-                <h2 class="title">Oslo, Norway</h2>
-            </div>
-        </aside>
+      <article class="slot row_b">
+        <a href="">
+          <img src="">
+          <div></div>
+        </a>
+      </article>
 
-        <section>
-            <!-- Sponsors goes here -->
-        </section>
-    </footer>
+      <article class="slot row_c">
+        <a href="">
+          <img src="">
+          <div></div>
+        </a>
+      </article>
+
+      <article class="slot row_a">
+        <a href="">
+          <img src="">
+          <div></div>
+        </a>
+      </article>
+
+      <article class="slot row_b">
+        <a href="">
+          <img src="">
+          <div></div>
+        </a>
+      </article>
+
+      <article class="slot row_c">
+        <a href="">
+          <img src="">
+          <div></div>
+        </a>
+      </article>
+
+      <article class="slot row_a">
+        <a href="">
+          <img src="">
+          <div></div>
+        </a>
+      </article>
+
+      <article class="slot row_b">
+        <a href="">
+          <img src="">
+          <div></div>
+        </a>
+      </article>
+
+      <article class="slot row_c">
+        <a href="">
+          <img src="">
+          <div></div>
+        </a>
+      </article>
+
+      <article class="slot row_a">
+        <a href="">
+          <img src="">
+          <div></div>
+        </a>
+      </article>
+
+      <article class="slot row_b">
+        <a href="">
+          <img src="">
+          <div></div>
+        </a>
+      </article>
+
+      <article class="slot row_c">
+        <a href="">
+          <img src="">
+          <div></div>
+        </a>
+      </article>
+
+      <article class="slot row_a">
+        <a href="">
+          <img src="">
+          <div></div>
+        </a>
+      </article>
+
+      <article class="slot row_b">
+        <a href="">
+          <img src="">
+          <div></div>
+        </a>
+      </article>
+
+      <article class="slot row_c">
+        <a href="">
+          <img src="">
+          <div></div>
+        </a>
+      </article>
+
+      <article class="slot row_d">
+        <a href="">
+          <img src="">
+          <div></div>
+        </a>
+      </article>
+
+    </section>
+    <script src="/js/location.js"></script>
+    <% include snips/footer.ejs %>
 </body>
 </html>
