Getting closer on the frontpage

--- a/views/frontpage.ejs
+++ b/views/frontpage.ejs
@@ -1,115 +1,123 @@
 <% include snips/head.ejs %>
+
+    <section class="wrap">
+      <article class="poster">
+        <h1>23rd - 24th of May</h1>
+        <h2>Oslo Norway</h2>
+      </article>
+    </section>
+
     <section class="wrap">
 
       <article class="slot row_a">
         <a href="/speakers/#bodil">
-          <div class="img jan"></div>
+          <div class="img bodil"></div>
           <h2>Bodil Stokke</h2>
         </a>
       </article>
 
       <article class="slot row_b">
-        <a href="">
-          <img src="">
-          <div></div>
+        <a href="/speakers/#david">
+          <div class="img david"></div>
+          <h2>David Nolen</h2>
         </a>
       </article>
 
       <article class="slot row_c">
-        <a href="">
-          <img src="">
-          <div></div>
+        <a href="/speakers/#garann">
+          <div class="img garann"></div>
+          <h2>Garann Means</h2>
         </a>
       </article>
 
       <article class="slot row_a">
-        <a href="">
-          <img src="">
-          <div></div>
+        <a href="/speakers/#jan">
+          <div class="img jan"></div>
+          <h2>Jan Lenhardt</h2>
         </a>
       </article>
 
       <article class="slot row_b">
-        <a href="">
-          <img src="">
-          <div></div>
+        <a href="/speakers/#mario">
+          <div class="img mario"></div>
+          <h2>Dr.-Ing. Mario Heiderich</h2>
         </a>
       </article>
 
       <article class="slot row_c">
-        <a href="">
-          <img src="">
-          <div></div>
+        <a href="/speakers/#reginald">
+          <div class="img reginald"></div>
+          <h2>Reginald Braithwaite</h2>
         </a>
       </article>
 
       <article class="slot row_a">
-        <a href="">
-          <img src="">
-          <div></div>
+        <a href="/speakers/#">
+          <div class="img tba"></div>
+          <h2>tba</h2>
         </a>
       </article>
 
       <article class="slot row_b">
-        <a href="">
-          <img src="">
-          <div></div>
+        <a href="/speakers/#">
+          <div class="img tba"></div>
+          <h2>tba</h2>
         </a>
       </article>
 
       <article class="slot row_c">
-        <a href="">
-          <img src="">
-          <div></div>
+        <a href="/speakers/#">
+          <div class="img tba"></div>
+          <h2>tba</h2>
         </a>
       </article>
 
       <article class="slot row_a">
-        <a href="">
-          <img src="">
-          <div></div>
+        <a href="/speakers/#">
+          <div class="img tba"></div>
+          <h2>tba</h2>
         </a>
       </article>
 
       <article class="slot row_b">
-        <a href="">
-          <img src="">
-          <div></div>
+        <a href="/speakers/#">
+          <div class="img tba"></div>
+          <h2>tba</h2>
         </a>
       </article>
 
       <article class="slot row_c">
-        <a href="">
-          <img src="">
-          <div></div>
+        <a href="/speakers/#">
+          <div class="img tba"></div>
+          <h2>tba</h2>
         </a>
       </article>
 
       <article class="slot row_a">
-        <a href="">
-          <img src="">
-          <div></div>
+        <a href="/speakers/#">
+          <div class="img tba"></div>
+          <h2>tba</h2>
         </a>
       </article>
 
       <article class="slot row_b">
-        <a href="">
-          <img src="">
-          <div></div>
+        <a href="/speakers/#">
+          <div class="img tba"></div>
+          <h2>tba</h2>
         </a>
       </article>
 
       <article class="slot row_c">
-        <a href="">
-          <img src="">
-          <div></div>
+        <a href="/speakers/#">
+          <div class="img tba"></div>
+          <h2>tba</h2>
         </a>
       </article>
 
       <article class="slot row_d">
-        <a href="">
-          <img src="">
-          <div></div>
+        <a href="/speakers/#">
+          <div class="img tba"></div>
+          <h2>tba</h2>
         </a>
       </article>
 
