--- a/public/css/style.css
+++ b/public/css/style.css
@@ -15,6 +15,7 @@ ul {
     list-style:                     none;
 }
 
+
 /* Global styles */
 body {
     font:                           100% sans-serif;                                                    /* ~16px; */
@@ -48,7 +49,7 @@ tr:nth-child( even ) {
 
 }
 tr:nth-child( odd ) {
-    background-color:               rgb(250,250,245);    
+    background-color:               rgb(250,250,245);
 }
 td, th {
     padding:                        10px;
@@ -61,8 +62,7 @@ td ul {
 
 
 
-
-
+/* Wrapper for sections in page */
 .logo,
 .menu,
 .wrap,
@@ -75,6 +75,62 @@ td ul {
     /* background-color:               rgba(255,255,255,0.3); */
 }
 
+
+
+/* Logo at the top of the page */
+.logo a {
+    display:                        block;
+    height:                         120px;
+    background-image:               url("../gfx/wr_logo.svg");
+    background-repeat:              no-repeat;
+    background-position:            top center;
+}
+
+
+/* Menu at the top of the page */
+.menu {
+    padding-top:                    0;
+    padding-bottom:                 0;
+}
+
+.menu a {
+    padding-top:                    8px;
+    padding-bottom:                 8px;
+    padding-right:                  5px;
+    padding-left:                   5px;
+    text-decoration:                none;
+    font-family:                    'Asap', sans-serif;
+    color:                          rgb(72, 72, 72);
+    text-shadow:                    rgba(255, 255, 255, 0.74902) 0px 1px 0px;
+}
+.menu a:hover {
+    color:                          rgb(0,0,0);
+}
+
+.menu .left a{
+    float:                          right;
+}
+.menu .right a{
+    float:                          left;
+}
+
+.menu div {
+    border-top:                     1px solid rgb(140, 140, 140);
+    border-bottom:                  1px solid rgb(140, 140, 140);
+    float:                          left;
+    width:                          50%;
+
+}
+
+
+/* Poster at frontpage */
+.poster {
+    height:                         300px;
+    background-image:               url(../gfx/bg.jpg);
+}
+
+
+/* Footer at the bottom of the page */
 .foot {
     overflow:                       hidden;
     background-color:               rgb(208,204,194);
@@ -100,44 +156,70 @@ td ul {
     color:                          rgb(140, 140, 140);
 }
 
-.logo a {
-    display:                        block;
-    height:                         120px;
-    background-image:               url("../gfx/wr_logo.svg");
-    background-repeat:              no-repeat;
-    background-position:            top center;
+
+/* Frontpage */
+.slot {
+    position:               relative;
+    overflow:               hidden;
+    height:                 150px;
+    float:                  left;
+    background-color:       rgb(255,255,255);
+    margin-bottom:          20px;
+    border:                 4px solid rgb(255,255,255);
+    border-radius:          4px;
+    /* box-shadow:             rgb(187, 187, 187) 0px 1px 4px 0px; */
+}
+.slot .img {
+    width:                  100%;
+    height:                 142px;
+    background-repeat:      no-repeat;
+    background-position:    top center;
+}
+.slot a h2 {
+    position:               absolute;
+    display:                none;
+    bottom:                 0;
+    height:                 40px;
+    padding-left:           8px;
+    padding-top:            4px;
+    width:                  100%;
+    font-size:              1.076em;
+    background-color:       rgba(0,0,0,0.5);
+    color:                  rgb(255,255,255);
+}
+.slot a:hover h2 {
+    display:                block;
+}
+.row_a {
+    width:                  212px;
+    margin-right:           10px;
+}
+.row_b {
+    width:                  214px;
+    margin-right:           10px;
+    margin-left:            10px;
+}
+.row_c {
+    width:                  212px;
+    margin-left:            10px;
+}
+.row_d {
+    width:                  214px;
+    margin-left:            232px;
 }
 
-.menu {
-    padding-top:                    0;
-    padding-bottom:                 0;
+
+/* Speakers */
+.slot .jan {
+    background-image:               url(../gfx/front_jan.jpg);
 }
 
-.menu a {
-    padding-top:                    8px;
-    padding-bottom:                 8px;
-    padding-right:                  5px;
-    padding-left:                   5px;
-    text-decoration:                none;
-    color:                          rgb(0,0,0);
-}
 
-.menu .left a{
-    float:                          right;
-}
-.menu .right a{
-    float:                          left;
-}
 
-.menu div {
-    border-top:                     4px solid rgb(35,75,81);
-    border-bottom:                  4px solid rgb(35,75,81);
-    float:                          left;
-    width:                          50%;
 
-}
 
-.page p,
+
+p,
 .imageFrame {
     margin-bottom:                  20px;
 }
@@ -158,7 +240,6 @@ td ul {
 }
 
 /** Map and image box styles **/
-
 .imageFrame {
     overflow:                       hidden;
     display:                        block;
@@ -218,7 +299,7 @@ td ul {
 
 
 
-/* Speakers */
+/* Speakers page */
 .speaker {
     overflow:                       hidden;
     margin-bottom:                  20px;
@@ -230,7 +311,7 @@ td ul {
 
 
 
-/* Schedule */
+/* Schedule page  */
 .schedule {
     width:                  680px;
 }
@@ -253,61 +334,6 @@ article ul {
 }
 
 
-.slot {
-    position:               relative;
-    overflow:               hidden;
-    height:                 150px;
-    float:                  left;
-    background-color:       rgb(255,255,255);
-    margin-bottom:          20px;
-    border:                 4px solid rgb(255,255,255);
-    border-radius:          4px;
-    /* box-shadow:             rgb(187, 187, 187) 0px 1px 4px 0px; */
-}
-.slot .img {
-    width:                  100%;
-    height:                 142px;
-    background-repeat:              no-repeat;
-    background-position:            top center;
-}
-.slot a h2 {
-    position:               absolute;
-    display:                none;
-    bottom:                 0;
-    height:                 40px;
-    padding:                4px;
-    width:                  100%;
-    background-color:       rgba(0,0,0,0.5);
-    color:                  rgb(255,255,255);
-}
-.slot a:hover h2 {
-    display:                block;
-}
-.row_a {
-    width:                  212px;
-    margin-right:           10px;
-}
-.row_b {
-    width:                  214px;
-    margin-right:           10px;
-    margin-left:            10px;
-}
-.row_c {
-    width:                  212px;
-    margin-left:            10px;
-}
-.row_d {
-    width:                  214px;
-    margin-left:            232px;
-}
-
-
-/* Speakers */
-.slot .jan {
-    background-image:               url(../gfx/front_jan.jpg);
-}
-
-
 
 @media screen and (max-width: 720px) {
     .page .logo, .page .menu, .page .wrap, .page .foot {
@@ -325,7 +351,7 @@ article ul {
     img {
         max-width: 100%;
     }
-    
+
     .fullWidthImg {
         height: auto;
     }
