--- a/views/location.ejs
+++ b/views/location.ejs
@@ -24,12 +24,6 @@
           food served at the conference will be provided from these establishments.
         </p>
 
-        <div id="locationTogler">
-            <ul>
-                <li><a href="#locationimages">Images</a></li>
-                <li><a href="#locationmap">Map</a></li>
-            </ul>
-        </div>
         <div id="locationIll">
             <div class="images" id="locationimages" style="display: none;">
                 <a href="../gfx/venue_01.jpg" title="Previous picture" class="arrow prev">&lt;</a>
@@ -39,6 +33,11 @@
             </div>
             <div id="locationmap"><div id="map" class="map"> </div></div>
         </div>
+        <div id="locationTogler">
+            <a href="#locationimages">Images</a>
+            <a href="#locationmap">Map</a>
+        </div>
+
 
         <h2>Getting there</h2>
         <p>The address is <a href="https://maps.google.com/maps?q=Scandic+Hotel+Vulkan,+Maridalsveien+13,+0175+Oslo,+Norway&hl=en&sll=59.922366,10.753341&sspn=0.003699,0.013078&dirflg=w&hq=Scandic+Hotel+Vulkan,+Maridalsveien+13,+0175+Oslo,+Norway&t=m&z=15"><strong>Maridalsveien 13-17</strong></a></p>
