--- a/views/frontpage.ejs
+++ b/views/frontpage.ejs
@@ -2,10 +2,13 @@
 
     <section class="wrap">
       <article class="poster">
-        <h1>23rd - 24th of May</h1>
-        <h2>Oslo Norway</h2>
+        <h1>All web, all the time</h1>
+        <h2>23rd - 24th of May</h2>
+        <h3>Oslo Norway</h3>
       </article>
     </section>
+  
+    <div class="separator"></div>
 
     <section class="wrap">
 
