Getting into a possible launch quality

--- a/views/about.ejs
+++ b/views/about.ejs
@@ -15,6 +15,9 @@
           year, and we are very excited to once again welcome all of
           our friends around the world!
         </p>
+
+        <div class="separator"></div>
+
         <h2>We Love the Community</h2>
         <p>
           We love our community and we <a
@@ -23,6 +26,9 @@
           region. We want to give something back to the community that
           fuels our conference this year as well.
         </p>
+        
+        <div class="separator"></div>
+
         <h2>Conference Code of Conduct</h2>
         <p>
           Everyone taking part in the Web Rebels Conference must abide
@@ -30,7 +36,9 @@
           Code of Conduct</a>. We all want these couple of days to be
           unforgettable, so let's just have a great time!
         </p>
-
+        
+        <div class="separator"></div>
+        
         <h2>Questions? Contact us!</h2>
         <p>
           Any questions you might have, please do not hesitate to <a
