--- a/views/location.ejs
+++ b/views/location.ejs
@@ -8,6 +8,8 @@
           are all taking place within a few metres of the venue.
         </p>
 
+        <div class="separator"></div>
+
         <h2>The Venue</h2>
         <p>
           Our conference venue is <a target="_blank" href="http://www.fabrikken.no/">Fabrikken</a>, located in the newly constructed
@@ -38,6 +40,7 @@
             <a href="#locationmap">Map</a>
         </div>
 
+        <div class="separator"></div>
 
         <h2>Getting there</h2>
         <p>The address is <a href="https://maps.google.com/maps?q=Scandic+Hotel+Vulkan,+Maridalsveien+13,+0175+Oslo,+Norway&hl=en&sll=59.922366,10.753341&sspn=0.003699,0.013078&dirflg=w&hq=Scandic+Hotel+Vulkan,+Maridalsveien+13,+0175+Oslo,+Norway&t=m&z=15"><strong>Maridalsveien 13-17</strong></a></p>
@@ -69,9 +72,11 @@
           that taxi fares in Norway are quite expensive.
         </p>
 
-        <h2>You Can Travel to Norway Cheaply (No, Really!)</h2>
+        <div class="separator"></div>
+
+        <h2>Stay cheaply</h2>
         <p>
-          <a target="_blank" href="http://norwegian.no/en/">Norwegian</a> and
+          You can travel to Norway cheaply (No, Really)! <a target="_blank" href="http://norwegian.no/en/">Norwegian</a> and
           <a target="_blank" href="http://www.flysas.com/en/uk/">SAS</a>
           both have lower priced tickets on sale which
           you can get if you make reservations early.
@@ -85,6 +90,9 @@
           SAS generally offers a more comfortable flight, but
           Norwegian offers free in-flight wifi.
         </p>
+        
+        <div class="separator"></div>
+
         <h2>From Oslo Airport</h2>
         <p>
           Whatever you do, don't grab a taxi from the
@@ -96,7 +104,9 @@
           transport aplenty. If you're staying at the conference
           hotel, see the guide for getting to the venue above.
         </p>
-
+        
+        <div class="separator"></div>
+        
         <h2>Staying in Oslo</h2>
         <p>
           There are several great hotels within walking distance of
@@ -134,10 +144,11 @@
           distance of the venue. Free wifi, naturally.
           <!--a href="http://www.comforthotelxpress.no/">Hotel website</a-->
         </p>
-
-        <h2>If Your Company's Paying Anyway</h2>
+        
+        <div class="separator"></div>
+        <h2>Splurge</h2>
         <p>
-          Unlike most other things in Norway, hotels in Oslo are
+          If your company's paying anyway why not splurge. Unlike most other things in Norway, hotels in Oslo are
           surprisingly cheap. You can stay at the 5 star
           <a href="http://www.radissonblu.com/plazahotel-oslo">Radisson
           BLU Plaza</a>, located in the heart of the city, right next
