--- a/views/snips/menu.ejs
+++ b/views/snips/menu.ejs
@@ -1,6 +1,6 @@
 <menu class="menu">
     <div class="left">
-        <a href="/location/">Location</a>
+        <a href="/location/">Venue</a>
         <a href="/tickets/">Tickets</a>
         <a href="/speakers/">Speakers</a>
         <a href="/">Home</a>
