--- a/views/speakers.ejs
+++ b/views/speakers.ejs
@@ -2,32 +2,45 @@
 
     <article class="wrap">
         <h1>Speakers</h1>
+        <p>There will be in total 16 speakers during the two main days of Web Rebels. Please note that we also run an <a href="/openmic/">Open Mic</a> night where you as an attendee can be the speaker.</p>
 
+        <a name="bodil"></a>
         <div class="speaker">
             <img class="imageFrame" src="../gfx/speaker_bodil.jpg">
             <h2>Bodil Stokke</h2>
             <p><a href="http://bodil.org/">Bodil</a> is a developer, frequent speaker and occasional teacher of web technology and the dark realm of Lisp. She is currently leading the web dev team at <a href="http://arktekk.no/">Arktekk</a>. She is best known as the creator of the <a href="http://catnipide.com/">Catnip IDE</a>, and for her contributions to the field of programming language theory, especially the <a href="http://bodil.org/coffeescript/#the-secret-slide">Facial Hair Theory of Language Design</a>. She holds a doctorate in Metaphysics from <a href="http://www.themonastery.org/catalog/drofmetaphysicscertificate-p-116.html">ULC</a>, and her favourite pony is <a href="http://www.youtube.com/watch?v=cDuG95DXbw8">Rainbow Dash</a>.</p>
         </div>
 
+        <div class="separator"></div>
 
+        <a name="david"></a>
         <div class="speaker">
             <img class="imageFrame" src="../gfx/speaker_david.jpg">
             <h2>David Nolen</h2>
             <p><a href="http://dosync.posterous.com/">David Nolen</a> is a JavaScript developer at The New York Times and helps run the <a href="http://kitchentablecoders.com/">Kitchen Table Coders</a> workshops in Brooklyn. David spends far too much of his free time having fun hacking on <a href="https://github.com/clojure/core.logic">core.logic</a>, <a href="https://github.com/clojure/core.match">core.match</a>, and <a href="https://github.com/clojure/clojurescript">ClojureScript</a>.</p>
         </div>
 
+        <div class="separator"></div>
+
+        <a name="garann"></a>
         <div class="speaker">
             <img class="imageFrame" src="../gfx/speaker_garann.jpg">
             <h2>Garann Means</h2>
             <p><a href="http://garann.com/">Garann</a> is a JavaScript developer from Austin, Texas, USA. Before switching back to the front-end, she worked for many years as a back-end and full-stack developer. She works for Etsy, is the author of <a href="http://shop.oreilly.com/product/0636920023258.do">Node for Front-End Developers</a>, and is the organizer of <a href="http://www.meetup.com/Austin-All-Girl-Hack-Night/">Austin All-Girl Hack Night</a> and <a href="http://www.meetup.com/Girl-Develop-It-Austin/">Girl Develop It Austin</a>.</p>
         </div>
 
+        <div class="separator"></div>
+
+        <a name="jan"></a>
         <div class="speaker">
             <img class="imageFrame" src="../gfx/speaker_jan.jpg">
             <h2>Jan Lenhardt</h2>
             <p><a href="http://jan.prima.de/">Jan Lehnardt</a> is an Open Source developer. He works on all parts of the web stack and tries to make things easier for everyone. He’s a core contributor to <a href="http://couchdb.apache.org/">Apache CouchDB</a>, a co-curator for <a href="jsconf.eu">JSConf EU</a> and lives in Berlin.</p>
         </div>
 
+        <div class="separator"></div>
+
+        <a name="mario"></a>
         <div class="speaker">
             <img class="imageFrame" src="../gfx/speaker_mario.jpg">
             <h2>Dr.-Ing. Mario Heiderich</h2>
@@ -38,6 +51,9 @@
             <p>Mario has spoken on a large variety of international conferences, co-authored two books, several academic papers and doesn’t see a problem in his one-point-five year old son having a tablet already.</p>
         </div>
 
+        <div class="separator"></div>
+
+        <a name="reginald"></a>
         <div class="speaker">
             <img class="imageFrame" src="../gfx/speaker_reginald.jpg">
             <h2>Reginald Braithwaite</h2>
