--- a/public/css/style.css
+++ b/public/css/style.css
@@ -105,16 +105,18 @@ td ul {
 
 .menu a {
     padding-top:                    8px;
-    padding-bottom:                 8px;
+    padding-bottom:                 4px;
     padding-right:                  5px;
     padding-left:                   5px;
     text-decoration:                none;
     font-family:                    'Asap', sans-serif;
     color:                          rgb(72, 72, 72);
     text-shadow:                    rgba(255, 255, 255, 0.74902) 0px 1px 0px;
+    border-bottom:                  4px solid rgba(0, 0, 0, 0);
 }
 .menu a:hover {
     color:                          rgb(0,0,0);
+    border-bottom:                  4px solid rgb(140, 140, 140);
 }
 
 .menu .left a{
@@ -137,7 +139,6 @@ td ul {
 .poster {
     position:                       relative;
     height:                         350px;
-    background-image:               url(../gfx/b3.jpg);
     border-radius:                  4px;
 }
 
@@ -149,7 +150,6 @@ td ul {
     padding-left:                   10px;
     padding-right:                  10px;
     background-color:               rgba(255,255,255,0.7);
-
     text-shadow:                    rgba(255, 255, 255, 0.74902) 0px 1px 0px;
 }
 .poster h1 {
@@ -212,7 +212,6 @@ td ul {
 }
 .slot a h2 {
     position:               absolute;
-    display:                none;
     bottom:                 0;
     height:                 40px;
     padding-left:           8px;
@@ -221,9 +220,6 @@ td ul {
     font-size:              1.076em;
     background-color:       rgba(0,0,0,0.5);
     color:                  rgb(255,255,255);
-}
-.slot a:hover h2 {
-    display:                block;
 }
 .row_a {
     width:                  212px;
@@ -242,15 +238,6 @@ td ul {
     width:                  214px;
     margin-left:            232px;
 }
-
-
-/* Speakers */
-.slot .jan {
-    background-image:               url(../gfx/front_jan.jpg);
-}
-
-
-
 
 
 
@@ -278,9 +265,10 @@ p,
 .imageFrame {
     overflow:                       hidden;
     display:                        block;
-    border:                         2px solid rgb(35,75,81);
-    padding:                        4px;
     background-color:               rgb(255,255,255);
+    margin-bottom:                  20px;
+    border:                         4px solid rgb(255,255,255);
+    border-radius:                  4px;
 }
 
 .map {
@@ -355,6 +343,7 @@ p,
 /* Speakers page */
 .speaker {
     overflow:                       hidden;
+    margin-top:                     20px;
     margin-bottom:                  20px;
 }
 .speaker img {
